# Swiftcache

./: .gitignore  CMakeLists.txt  README.md  SWIFTCACHE_TASK.md  study-guide.md
.github/workflows/: ci.yml
benchmarks/: .gitkeep  bench_store.cpp  tcp_bench.py
client/: .gitkeep  cache_pb2.py  cache_pb2_grpc.py  client.py  grpc_client.py
proto/: .gitkeep  cache.proto
src/core/: lru.cpp  lru.h  store.cpp  store.h  ttl.cpp  ttl.h
src/grpc/: .gitkeep  cache.grpc.pb.cc  cache.grpc.pb.h  cache.pb.cc  cache.pb.h  cache_service.cpp  cache_service.h
src/parser/: command.cpp  command.h
src/persistence/: aof.cpp  aof.h
src/server/: connection.cpp  connection.h  main.cpp  server.cpp  server.h
tests/: test_aof.cpp  test_comprehensive.cpp  test_grpc.cpp  test_lru.cpp  test_parser.cpp  test_server.cpp  test_store.cpp  test_ttl.cpp
